# hermes-plugin-mem4

./: .gitattributes  .gitignore  LICENSE  README.md  README_zh-TW.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml  run_tests.py
docs/: refine-section3-policy.md
mem4/: __init__.py  audit.py  backend.py  cli.py  doctor.py  dream.py  gate.py  recall.py  refine.py  usermind.py
mem4/eval/: __init__.py  harness.py  history_samples.json  qa_fixture.json
tests/: conftest.py  test_mem4_audit.py  test_mem4_doctor.py  test_mem4_dream.py  test_mem4_gate.py  test_mem4_provider.py  test_mem4_recall.py  test_mem4_refine.py  test_mem4_refine_promote.py  test_mem4_usermind.py
